Bug 183069 - trunk topcrash when quitting [@ nsPrefBranch::RemoveObserver]. Release our observer references only _after_ we remove them from our observer list, to avoid someone else trying to remove the same observer we're working on removing. r=timeless sr=jst a=jst, and #mozilla (smontagu,timeless) who acting as sheriff asked me to land this into a closed tree.